--- a/style.css
+++ b/style.css
@@ -18,6 +18,19 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: white;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+#a-botao{
+    color: white;
+}
+
 p {
     font-family: 'arial unicode';
     font-size: 30px;
@@ -40,15 +53,15 @@ h2{
     width: 90%;
     margin: auto;
     margin-bottom: 50px;
-    border-top: 2px solid rgb(177, 177, 177);
+    border-bottom: 2px solid rgb(177, 177, 177);
     text-align: center;
 }
 
 .header-section h1 {
     color: black;
     padding-top: 100px;
+    padding-bottom: 30px;
     font-size: 50px;
-
 }
 
 /* MENU */
@@ -94,8 +107,13 @@ h2{
 /* HEADER */
 
 header{
+    top: 0;
     width: 100%;
     height: 100px;
+    position: fixed;
+    z-index: 3;
+    background-color: white;
+    box-shadow: 10px 2px 10px 5px rgba(0, 0, 0, 0.2);
 }
 
 #logo-lateral{
@@ -128,7 +146,7 @@ header{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.1;
+    opacity: 0.2;
 }
 
 /* CONTEUDO HOME */
@@ -136,6 +154,7 @@ header{
 #conteudo-home {
     position: relative;
     display: flex;
+    margin-top: 100px;
     flex-direction: column;
     justify-content: center;
     width: 100%;
@@ -158,7 +177,7 @@ header{
     width: 300px;
     background-color: #73d31a;
     color: white;
-    border-radius: 30px; 
+    border-radius: 10px; 
     cursor: pointer;
     margin: 20px auto;
     padding: 10px auto;
@@ -186,7 +205,7 @@ header{
 
 #sobre {
     width: 100%;
-    height: 600px;
+    height: 450px;
     display: grid;
     grid-template-columns: 50% 50%;
 }
@@ -198,7 +217,7 @@ header{
 }
 
 #texto-sobre p {
-    font-size: 25px;
+    font-size: 23px;
 }
 
 
@@ -206,12 +225,12 @@ header{
     grid-column: 2;
     display: flex;
     justify-content: center; 
- 
+    padding-top: 5%;
 }
 
 #logo-principal {
-    max-width: 60%;
-    max-height: 60%; 
+    max-width: 55%;
+    max-height: 55%; 
 }
 
 /* MARCADOR */
@@ -219,21 +238,171 @@ header{
 #section-marcador {
     width: 100%;
     padding-bottom: 100px;
+    height: 1200px;
+    background-color: #5E4A33;
 }
 
-#marcador {
-    width: 90%;
-    height: 700px;
-    background-color: #5E4A33;
-    margin: auto;
-    border-radius: 30px;
+
+#section-marcador h1 {
+    color: white;
+    text-align: center;
+    padding-top: 50px;
+}
+
+#carousel-marcador {
+    width: 100%;
+    height: 500px;
+    margin-top: 70px;
+    display: flex;
+    overflow: hidden;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+}
+
+#carousel-marcador::-webkit-scrollbar {
+    height: 15px; /* Altura da barra de rolagem horizontal */
+}
+
+#carousel-marcador::-webkit-scrollbar-track {
+    background-color: #D8D3CD; /* Cor do trilho da barra */
+}
+
+#carousel-marcador::-webkit-scrollbar-thumb {
+    background-color: #2B7C74; /* Cor do polegar */
+}
+
+#carousel-marcador::-webkit-scrollbar-thumb:hover {
+    background-color: #005C53; /* Cor ao passar o mouse */
+}
+
+.modal {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); 
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal #modalImage{
+    width: 50%;
+    height: 80%;
+    border-radius: 10px;
+}
+
+.modal .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 40px;
+    fill: white;
+    cursor: pointer;
+}
+
+.close:hover {
+    fill: red;
+}
+
+.foto {
+    width: 100%;
+    object-fit: cover;
+    transition: 0.5s;
+}
+
+.foto:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.seta-direita {
+    margin: 50px;
+    cursor: pointer;
+}
+
+.seta-esquerda {
+    margin: 50px;
+    cursor: pointer;
+}
+
+#descricao p{
+    color: white;
+    text-align: justify;
+    margin: 50px;
+    margin-top: 140px;
 }
 
 /* ORÇAMENTO */
 
+#orcamento {
+    padding-bottom: 100px;
+    background-color: #dddddd;
+}
 
+#form-orcamento {
+    width: 70%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 2;
+    grid-template-rows: 6;
+    gap: 50px;
+    row-gap: 20px;
+}
 
-/* CONTATATE-NOS */
+#form-group{
+    display: flex;
+}
+
+#nome-group {
+    grid-column: 1;
+}
+
+#cpf-group {
+    grid-column: 2;
+}
+
+#log-group {
+    grid-column: 1/3;
+}
+
+#msg-group {
+    grid-column: 1/3;
+}
+
+#msg-group input {
+    height: 100px;
+}
+
+#form-button {
+    grid-column: 1/3;
+}
+
+.label {
+    font-family: 'arial unicode';
+    color: rgb(134, 134, 134);
+    font-size: 20px;
+    display: block;
+    padding-bottom: 10px;
+}
+
+.input {
+    background-color: white;
+    border: 2px solid rgb(177, 177, 177);
+    border-radius: 5px;
+    width: 100%;
+    height: 40px;
+}
+
+.input::placeholder {
+    font-family: 'arial unicode';
+    color: rgb(177, 177, 177);
+    padding-left: 10px;
+}
+
+/* CONTATE-NOS */
 
 #contato {
     width: 100%;
