--- a/style-celular.css
+++ b/style-celular.css
@@ -238,7 +238,7 @@
     
     #sobre {
         width: 100%;
-        height: 750px;
+        height: auto;
         display: block;
     }
     
@@ -269,7 +269,7 @@
     #section-marcador {
         width: 100%;
         padding-bottom: 20px;
-        height: 1150px;
+        height: auto;
         background-color: #5E4A33;
     }
     
@@ -320,15 +320,15 @@
     }
     
     .modal #modalImage{
-        width: 70%;
+        width: 90%;
         height: 40%;
         border-radius: 10px;
     }
     
     .modal .close {
         position: absolute;
-        top: 330px;
-        right: 85px;
+        top: 26%;
+        right: 2%;
         font-size: 40px;
         fill: white;
         cursor: pointer;
@@ -350,13 +350,19 @@
     }
     
     .seta-direita {
+        position: absolute;
         margin: 20px;
         cursor: pointer;
+        margin-top: 110%;
+        margin-left: 350px;
     }
     
     .seta-esquerda {
+        position: absolute;
         margin: 20px;
+        margin-top: 110%;
         cursor: pointer;
+        margin-right: 350px;
     }
     
     #descricao p{
@@ -459,7 +465,7 @@
     
     #contato-grid {
         display: grid;
-        grid-template-columns: 40% 60%;
+        grid-template-columns: 30% 70%;
         width: 100%;
     }
     
@@ -470,8 +476,8 @@
     
     #contato-icones svg{
         display: flex;
-        width: 70px;
-        height: 70px;
+        width: 40px;
+        height: 40px;
         fill: white;
         margin: auto;
         margin-top: 40px;
@@ -479,13 +485,13 @@
     
     
     #contato-escrita p{
-        font-size: 20px;
+        font-size: 18px;
         display: block;
         max-width: 100%;
         fill: white;
         text-align: left;
         margin: auto;
-        margin-top: 65px;
+        margin-top: 50px;
         padding-left: 0px;
     }
     
